test/Fail/UnquoteCannotDeclareHiddenFunction.err
UnquoteCannotDeclareHiddenFunction.agda:7.1-8.67: error: [Unquote.CannotDeclareHiddenFunction]
Cannot declare hidden function x
